Finished messages Added routes and updated views to display and post messages Removed tags from schema and in code

--- a/app/views/studygroups/show.html.erb
+++ b/app/views/studygroups/show.html.erb
@@ -32,12 +32,24 @@
 List of members:
 <% @studygroup.users.each do |user| %>
     <%= user.email %>
+    <br>
 <% end %>
 
+<br>
 
-<%= p '$'*10 %>
-<%= p @studygroup.messages %>
-<%= @studygroup.messages.each do |msg| %>
-  <%= message.body %>
-  <%= User.find_by(id: message.user_id).name %>
+<% @studygroup.messages.each do |msg| %>
+  Posted by: <%= User.find_by(id: msg.user_id).email %>
+  Message: <%= msg.body %>
+  <br>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@studygroup, @studygroup.messages.build]) do |f| %>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
