--- a/app/assets/stylesheets/typeheadjs1.css
+++ b/app/assets/stylesheets/typeheadjs1.css
@@ -112,3 +112,45 @@ body {
     height: 100%;
     width: 100%;
 }
+
+#enroll_input, #studyGroupCourse{
+    width: 172px;
+    background-color: rgba(255, 255, 255, 1) !important;
+}
+
+.info-page{
+    min-height: 100%;
+    border: 2px solid green; 
+    background: white; 
+    background-image: url('/assets/ios-linen.jpg'); 
+    margin: 10px 10px 10px 10px;
+}
+
+.info-page > .inner{
+    margin: 40px 20px 20px 20px;
+}
+
+.info-page > .inner-study-group{
+    padding-top: 10px;
+    padding-bottom: 40px;
+    margin: 0 auto; 
+    width:25%; 
+    color: white;
+}
+
+
+.field{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid;
+    text-align: center;
+}
+
+.actions{
+    padding-top: 20px;
+    padding:bottom: 20px;
+}
+
+#date, #location, #minsize, #maxsize, #emails, #tags, #groupname, #studyGroupCourse, .tt-dropdown-menu{
+    color: black;
+}
