--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -1,187 +1,195 @@
-<%= form_tag('add', name: 'add', onsubmit: 'return validateForm();') do %>
-    <div class="field">
-      <%= label_tag :groupname, 'Study Group Name' %><br>
-      <%= text_field_tag :groupname %>
+<section class="info-page">
+  <h1 style="text-align:center; color:white;font-family: times, Times New Roman, times-roman, georgia, serif;"> Creating A New Study Group</h1>
+  <h3 style="text-align:center; color:white;font-family: Gill Sans, Verdana;
+  font-size: 25px;"> Please fill out the form bellow</h3>
+  <section class="inner-study-group">
 
-      Private:
-      <input type="hidden" id="private" name="private" value="false"/>
-      <input type="checkbox" id="private" name="private" value="true"/>
-    </div>
+   <%= form_tag('add', name: 'add', onsubmit: 'return validateForm();') do %>
+      <div class="field">
+        <%= label_tag :groupname, 'Study Group Name' %><br>
+        <%= text_field_tag :groupname%>
+        </br>
+        Private:
+        <input type="hidden" id="private" name="private" value="false"/>
+        <input type="checkbox" id="private" name="private" value="true"/>
 
-    <div class="field">
-      <%= label_tag :unscheduled, 'Unscheduled:' %><br>
-      <input type="hidden" id="unscheduled_hidden" name="unscheduled" value="false"/>
-      <input type="checkbox" id="unscheduled_checkbox" name="unscheduled" value="true"/>
-    </div>
-
-    <div class="field" >
-      <%= label_tag 'Start Time' %><br>
-      <select name="start_hours">
-        <option>1
-        <option selected>2
-        <option>3
-        <option>4
-        <option>5
-        <option>6
-        <option>7
-        <option>8
-        <option>9
-        <option>10
-        <option>11
-        <option>12
-      </select>
-      :
-      <select name="start_minutes">
-        <option selected>00
-        <option>30
-      </select>
-      <select name="start_time_tag">
-        <option>A.M.
-        <option selected>P.M.
-      </select>
-    </div>
-
-    <div class="field">
-      <%= label_tag 'End Time' %><br>
-      <select name="end_hours">
-        <option>1
-        <option>2
-        <option>3
-        <option selected>4
-        <option>5
-        <option>6
-        <option>7
-        <option>8
-        <option>9
-        <option>10
-        <option>11
-        <option>12
-      </select>
-      :
-      <select name="end_minutes">
-        <option selected>00
-        <option>30
-      </select>
-      <select name="end_time_tag">
-        <option>A.M.
-        <option selected>P.M.
-      </select>
-    </div>
-
-    <div class="field">
-      <%= label_tag :date %><br>
-      <%= date_field_tag :date %>
-    </div>
-
-    <div class="field">
-      <%= label_tag :location %><br>
-      <%= text_field_tag :location %>
-    </div>
-
-    <div class="field">
-      <%= label_tag :size, 'Study Group Size' %><br>
-      Min
-      <input id="minsize" name="minsize" min="2" max="9" type="number" size="1"/>
-      Max
-      <input id="maxsize" name="maxsize" min="2" max="9" type="number" size="1"/>
-    </div>
-
-    <div class="field">
-      <%= label_tag :recurring, 'Recurring' %><br>
-      <input type="hidden" id="recurring_hidden" name="recurring" value="false"/>
-      <input type="checkbox" id="recurring_checkbox" name="recurring" value="true"/>
-      <div id="recurring_dates" style="display:none">
-        <%= label_tag :recurring, 'Which Days?' %><br>
-        Sunday
-        <input type="hidden" id="sunday" name="sunday" value="false"/>
-        <input type="checkbox" id="sunday" name="sunday" value="true"/>
-        Monday
-        <input type="hidden" id="monday" name="monday" value="false"/>
-        <input type="checkbox" id="monday" name="monday" value="true"/>
-        Tuesday
-        <input type="hidden" id="tuesday" name="tuesday" value="false"/>
-        <input type="checkbox" id="tuesday" name="tuesday" value="true"/>
-        Wednesday
-        <input type="hidden" id="wednesday" name="wednesday" value="false"/>
-        <input type="checkbox" id="wednesday" name="wednesday" value="true"/>
-        Thursday
-        <input type="hidden" id="thursday" name="thursday" value="false"/>
-        <input type="checkbox" id="thursday" name="thursday" value="true"/>
-        Friday
-        <input type="hidden" id="friday" name="friday" value="false"/>
-        <input type="checkbox" id="friday" name="friday" value="true"/>
-        Saturday
-        <input type="hidden" id="saturday" name="saturday" value="false"/>
-        <input type="checkbox" id="saturday" name="saturday" value="true"/>
+        <%= label_tag :unscheduled, 'Unscheduled:' %>
+        <input type="hidden" id="unscheduled_hidden" name="unscheduled" value="false"/>
+        <input type="checkbox" id="unscheduled_checkbox" name="unscheduled" value="true"/>
       </div>
 
-      <script>
-          $('#recurring_checkbox').click(function() {
-              $("#recurring_dates").toggle(this.checked);
-          });
-      </script>
-    </div>
+      <div class="field" >
+        <%= label_tag 'Start Time' %><br>
+        <select name="start_hours">
+          <option>1
+          <option selected>2
+          <option>3
+          <option>4
+          <option>5
+          <option>6
+          <option>7
+          <option>8
+          <option>9
+          <option>10
+          <option>11
+          <option>12
+        </select>
+        :
+        <select name="start_minutes">
+          <option selected>00
+          <option>30
+        </select>
+        <select name="start_time_tag">
+          <option>A.M.
+          <option selected>P.M.
+        </select>
+        </br>
+        <%= label_tag 'End Time' %><br>
+        <select name="end_hours">
+          <option>1
+          <option>2
+          <option>3
+          <option selected>4
+          <option>5
+          <option>6
+          <option>7
+          <option>8
+          <option>9
+          <option>10
+          <option>11
+          <option>12
+        </select>
+        :
+        <select name="end_minutes">
+          <option selected>00
+          <option>30
+        </select>
+        <select name="end_time_tag">
+          <option>A.M.
+          <option selected>P.M.
+        </select>
+      </div>
 
-    <div class="field">
-      <%= label_tag :emails, 'Invite Members(via email, separated by spaces)' %><br>
-      <%= text_field_tag :emails %>
-    </div>
+      <div class="field">
+        <%= label_tag :date %><br>
+        <%= date_field_tag :date %>
+      </div>
 
-    <div class="field">
-      <%= label_tag :tags, 'Tags(Separated by spaces)' %><br>
-      <%= text_field_tag :tags %>
-    </div>
+      <div class="field">
+        <%= label_tag :location %><br>
+        <%= text_field_tag :location %>
+      </div>
 
-    <div id="the-basics">
-      <%= label_tag :course %><br>
-      <input class="typeahead" type="text" name="course" placeholder="What Course?" id="studyGroupCourse">
-      <script>
-          $(document).ready(function() {
-              var substringMatcher = function(strs) {
-                  return function findMatches(q, cb) {
-                      var matches, substrRegex;
-                      // an array that will be populated with substring matches
-                      matches = [];
+      <div class="field">
+        <%= label_tag :size, 'Study Group Size' %><br>
+        Min
+        <input id="minsize" name="minsize" min="2" max="9" type="number" size="1"/>
+        Max
+        <input id="maxsize" name="maxsize" min="2" max="9" type="number" size="1"/>
+      </div>
 
-                      // regex used to determine if a string contains the substring `q`
-                      substrRegex = new RegExp(q, 'i');
+      <div class="field">
+        <%= label_tag :recurring, 'Recurring' %>
+        <input type="hidden" id="recurring_hidden" name="recurring" value="false"/>
+        <input type="checkbox" id="recurring_checkbox" name="recurring" value="true"/>
+        <div id="recurring_dates" style="display:none">
+          <%= label_tag :recurring, 'Which Days?' %><br>
+          <table>
+            <tr>Sunday
+            <input type="hidden" id="sunday" name="sunday" value="false"/>
+            <input type="checkbox" id="sunday" name="sunday" value="true"/>
+            </tr>
+            </br>
+            <tr>Monday
+            <input type="hidden" id="monday" name="monday" value="false"/>
+            <input type="checkbox" id="monday" name="monday" value="true"/></tr></br>
+            <tr>Tuesday
+            <input type="hidden" id="tuesday" name="tuesday" value="false"/>
+            <input type="checkbox" id="tuesday" name="tuesday" value="true"/></tr></br>
+            <tr>Wednesday
+            <input type="hidden" id="wednesday" name="wednesday" value="false"/>
+            <input type="checkbox" id="wednesday" name="wednesday" value="true"/></tr></br>
+            <tr>Thursday
+            <input type="hidden" id="thursday" name="thursday" value="false"/>
+            <input type="checkbox" id="thursday" name="thursday" value="true"/></tr></br>
+            <tr>Friday
+            <input type="hidden" id="friday" name="friday" value="false"/>
+            <input type="checkbox" id="friday" name="friday" value="true"/></tr></br>
+            <tr>Saturday
+            <input type="hidden" id="saturday" name="saturday" value="false"/>
+            <input type="checkbox" id="saturday" name="saturday" value="true"/></tr></br>
+          </table>
+        </div>
 
-                      // iterate through the pool of strings and for any string that
-                      // contains the substring `q`, add it to the `matches` array
-                      $.each(strs, function(i, str) {
-                          if (substrRegex.test(str)) {
-                              // the typeahead jQuery plugin expects suggestions to a
-                              // JavaScript object, refer to typeahead docs for more info
-                              matches.push({ value: str });
-                          }
-                      });
-                      cb(matches);
-                  };
-              };
-              var course_objects = <%= raw current_user.courses.to_json %>;
-              var course_titles = course_objects.map(function(object) {
-                  return object['title'];
-              });
-              $('#the-basics .typeahead').typeahead({
-                          hint: true,
-                          highlight: true,
-                          minLength: 1
-                      },
-                      {
-                          name: 'states',
-                          displayKey: 'value',
-                          source: substringMatcher(course_titles)
-                      });
-          });
-      </script>
-    </div>
+        <script>
+            $('#recurring_checkbox').click(function() {
+                $("#recurring_dates").toggle(this.checked);
+            });
+        </script>
+      </div>
 
-    <div class="actions">
-      <input name="commit" type="submit" value="Create" />
-    </div>
-<% end %>
+      <div class="field">
+        <%= label_tag :emails, 'Invite Members(via email, separated by spaces)' %><br>
+        <%= text_field_tag :emails %>
+      </div>
 
-<%= link_to 'Back', welcome_index_url %>
+      <div class="field">
+        <%= label_tag :tags, 'Tags(Separated by spaces)' %><br>
+        <%= text_field_tag :tags %>
+      </div>
+
+      <div id="the-basics" style="text-align: center;">
+        <%= label_tag :course %><br>
+        <input class="typeahead" type="text" name="course" placeholder="What Course?" id="studyGroupCourse">
+        <script>
+            $(document).ready(function() {
+                var substringMatcher = function(strs) {
+                    return function findMatches(q, cb) {
+                        var matches, substrRegex;
+                        // an array that will be populated with substring matches
+                        matches = [];
+
+                        // regex used to determine if a string contains the substring `q`
+                        substrRegex = new RegExp(q, 'i');
+
+                        // iterate through the pool of strings and for any string that
+                        // contains the substring `q`, add it to the `matches` array
+                        $.each(strs, function(i, str) {
+                            if (substrRegex.test(str)) {
+                                // the typeahead jQuery plugin expects suggestions to a
+                                // JavaScript object, refer to typeahead docs for more info
+                                matches.push({ value: str });
+                            }
+                        });
+                        cb(matches);
+                    };
+                };
+                var course_objects = <%= raw current_user.courses.to_json %>;
+                var course_titles = course_objects.map(function(object) {
+                    return object['title'];
+                });
+                $('#the-basics .typeahead').typeahead({
+                            hint: true,
+                            highlight: true,
+                            minLength: 1
+                        },
+                        {
+                            name: 'states',
+                            displayKey: 'value',
+                            source: substringMatcher(course_titles)
+                        });
+            });
+        </script>
+      </div>
+
+      <div class="actions">
+        <input name="commit" type="submit" value="Create" class="btn btn-info"/>
+        <%= link_to 'Back', welcome_index_url, :class => 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </section>
+</section>
+
 
 <script>
     document.getElementById("minsize").defaultValue = 2;
