--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -5,7 +5,7 @@
   padding-left: 121px;
   padding-right: 100px;
   background-color: rgba(175, 199, 198,1);
-  height: 100%;
+  min-height: 100%;
 }
 
 #site_title {
