Added tests for messages All tests pass

--- a/app/views/studygroups/show.html.erb
+++ b/app/views/studygroups/show.html.erb
@@ -50,6 +50,6 @@ List of members:
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Post Message' %>
   </p>
 <% end %>
