Fixed failing UI tests

--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -84,9 +84,9 @@
       <div class="field">
         <%= label_tag :size, 'Study Group Size' %><br>
         Min
-        <input id="minsize" name="minsize" min="2" max="9" type="number" size="1"/>
+        <input id="minsize" name="minsize" value="2" min="2" max="10" type="number" size="1"/>
         Max
-        <input id="maxsize" name="maxsize" min="2" max="9" type="number" size="1"/>
+        <input id="maxsize" name="maxsize" value="10" min="2" max="10" type="number" size="1"/>
       </div>
 
       <div class="field">
