small bug fix to calendar coloring: colors now stay consistent

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,25 +72,25 @@
                       if (calEvent.end <= date){
                           $(element).css("opacity", 0.2);
                       }
-                      if (y == 0){
+                      if (checked_courses[y] == course_titles[0]){
                           $(element).css("backgroundColor", "#0033FF");
                       }
-                      else if (y == 1){
+                      else if (checked_courses[y] == course_titles[1]){
                           $(element).css("backgroundColor", "#990000");
                       }
-                      else if (y == 2){
+                      else if (checked_courses[y] == course_titles[2]){
                           $(element).css("backgroundColor", "#99CC33");
                       }
-                      else if (y == 3){
+                      else if (checked_courses[y] == course_titles[3]){
                           $(element).css("backgroundColor", "#CC00FF");
                       }
-                      else if (y == 4){
+                      else if (checked_courses[y] == course_titles[4]){
                           $(element).css("backgroundColor", "#000090");
                       }
-                      else if (y == 5){
+                      else if (checked_courses[y] == course_titles[5]){
                           $(element).css("backgroundColor", "#2233CC");
                       }
-                      else if (y == 6){
+                      else if (checked_courses[y] == course_titles[6]){
                           $(element).css("backgroundColor", "#4400CC");
                       }
                       return true;
