--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -1,12 +1,12 @@
 <div id='cssmenu'>
 <ul>
-  <li id="site_title"><%= link_to 'MeetMyClassMates', root_path %></li>
+  <li id="site_title"><%= link_to 'MeetMyClassmates', root_path %></li>
   <li class='active has-sub title' ><a href='#'>My Study Groups</a>
     <ul>
       <% if current_user.studygroups.empty? %>
         <li> You're not in any study groups</li>
       <% else %>
-        <%current_user.studygroups.each do |studygroup| %>
+        <% current_user.studygroups.each do |studygroup| %>
           <li class='last'><%= link_to studygroup.name, studygroup_show_path(studygroup) %></li>
         <% end %>
       <% end %>
