--- a/app/assets/stylesheets/typeheadjs1.css
+++ b/app/assets/stylesheets/typeheadjs1.css
@@ -66,7 +66,7 @@ html {
 }
 
 #devise_login {
-    background-image: url('../images/cal.jpg');
+    background-image: url('/assets/cal.jpg');
     background-repeat:no-repeat;
     /* custom background-position */
     background-position:50% 50%;
@@ -122,7 +122,7 @@ body {
     min-height: 100%;
     border: 2px solid green; 
     background: white; 
-    background-image: url('../images/ios-linen.jpg');
+    background-image: url('/assets/ios-linen.jpg');
     margin: 10px 10px 10px 10px;
 }
 
