--- a/app/views/studygroups/denied.html.erb
+++ b/app/views/studygroups/denied.html.erb
@@ -1,3 +1,3 @@
-<h2>Access Denied: Studygroup <%= @studygroup.name %> is private. </h2>
+<h2>Access denied to Study Group: <%= @studygroup.name %></h2>
 <%= link_to 'Back', welcome_index_url %>
 
