Added more UI tests for studygroup show page

--- a/app/views/studygroups/show.html.erb
+++ b/app/views/studygroups/show.html.erb
@@ -22,8 +22,10 @@
     <%= f.submit 'Delete' %>
   <% end %>
   <% if @studygroup.unscheduled %>
-    <%= link_to 'Edit', edit_studygroup_path(@studygroup) %>
-  <% end %>
+    <%= form_for current_user, url: edit_studygroup_path(@studygroup), :method => :get do |f| %>
+      <%= f.submit 'Edit' %>
+    <% end %>
+    <% end %>
 <% else %>
   <% if Validation.user_in_studygroup(@studygroup, current_user) %>
     <%= form_for current_user, :url => {controller: :users, action: :leave_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
@@ -35,7 +37,6 @@
     <% end %>
   <% end %>
 <% end %>
-
 <br>
 
 <% @studygroup.messages.each do |msg| %>
