--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -1,5 +1,5 @@
 <div id='cssmenu'>
-<ul id="top_bar">
+<ul id="top_bar" style="background-color:#041F3E">
   <li id="site_title"><%= link_to 'MeetMyClassmates', root_path %></li>
   <li class='active has-sub title' ><a href='#'>My Study Groups</a>
     <ul>
