--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -4,7 +4,7 @@
   width: -moz-calc(100% - 199px);
   padding-left: 121px;
   padding-right: 100px;
-  background-color: rgba(175, 199, 198,1);
+  background-color: #DEECFB;
   min-height: 100%;
 }
 
