--- a/app/assets/stylesheets/drop-down.css
+++ b/app/assets/stylesheets/drop-down.css
@@ -60,7 +60,7 @@
   position: relative;
   text-align: center;
   text-decoration: none;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 0 rgba(131, 156, 195, 0.4);
   font-weight: 700;
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
@@ -123,7 +123,7 @@
 }
 #cssmenu > ul > li.has-sub > a:hover,
 #cssmenu > ul > li.has-sub:hover > a {
-  background: #3f3f3f;
+  background: #3C8DE4;
   border-color: #3f3f3f;
 }
 #cssmenu ul li > ul,
@@ -132,7 +132,7 @@
   width: auto;
   position: absolute;
   top: 43px;
-  background: #3f3f3f;
+  background: #839CC3;
   border-radius: 0 0 5px 5px;
   z-index: 999;
   padding: 10px 0;
