--- a/app/views/studygroups/show.html.erb
+++ b/app/views/studygroups/show.html.erb
@@ -1,56 +1,85 @@
-<h3> Studygroup Name: <%= @studygroup.name %> </h3>
-<h3> Course: <%= @studygroup.course.title %> </h3>
-<% if not @studygroup.start_time.nil? and not @studygroup.end_time.nil? and not @studygroup.date.nil? %>
-<h3> From <%= @studygroup.start_time.strftime('%I:%M %p') %> to To <%= @studygroup.end_time.strftime('%I:%M %p') %> on <%= @studygroup.date.strftime('%m/%d/%y') %> </h3>
-<% end %>
-<h3>  </h3>
-<h3> Location: <%= @studygroup.location %> </h3>
-<h3> At least <%= @studygroup.minimum_size %> to members at most <%= @studygroup.maximum_size %> members. </h3>
-<h3> Owner: <%= @owner.email %> </h3>
-<h3> Private? <%= 'No' unless @studygroup.private %>  <%= 'Yes' if @studygroup.private %>  </h3>
-<h3> Unscheduled? <%= 'No' unless @studygroup.unscheduled %>  <%= 'Yes' if @studygroup.unscheduled %>  </h3>
-<h3> List of members: </h3>
-<% @studygroup.users.each do |user| %>
-  <blockquote>
-  <h4> <%= user.email %> </h4>
-  </blockquote>
-<% end %>
-
-
-<% if current_user.eql?(@owner) %>
-  <%= form_for current_user, url: {controller: :users, action: :delete_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
-    <%= f.submit 'Delete' %>
-  <% end %>
-<% else %>
-  <% if Validation.user_in_studygroup(@studygroup, current_user) %>
-    <%= form_for current_user, :url => {controller: :users, action: :leave_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
-      <%= f.submit 'Leave' %>
+<section style="padding-top: 20px; padding bottom: 20px; ">
+  <div style="float: left;
+    width: 50%;
+    text-align: left;
+    margin: 2px 10px;
+    display: inline;">
+    <h3> Studygroup Name: <%= @studygroup.name %> </h3>
+    <h3> Course: <%= @studygroup.course.title %> </h3>
+    <% if not @studygroup.start_time.nil? and not @studygroup.end_time.nil? and not @studygroup.date.nil? %>
+    <h3> From <%= @studygroup.start_time.strftime('%I:%M %p') %> to To <%= @studygroup.end_time.strftime('%I:%M %p') %> on <%= @studygroup.date.strftime('%m/%d/%y') %> </h3>
     <% end %>
-  <% else %>
-    <%= form_for current_user, :url => {controller: :users, action: :join_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
-      <%= f.submit 'Join' %>
+    <h3>  </h3>
+    <h3> Location: <%= @studygroup.location %> </h3>
+    <h3> At least <%= @studygroup.minimum_size %> to members at most <%= @studygroup.maximum_size %> members. </h3>
+    <h3> Owner: <%= @owner.email %> </h3>
+    <h3> Private? <%= 'No' unless @studygroup.private %>  <%= 'Yes' if @studygroup.private %>  </h3>
+    <h3> Unscheduled? <%= 'No' unless @studygroup.unscheduled %>  <%= 'Yes' if @studygroup.unscheduled %>  </h3>
+    <h3> List of members: </h3>
+    <% @studygroup.users.each do |user| %>
+      <blockquote>
+      <h4> <%= user.email %> </h4>
+      </blockquote>
     <% end %>
-  <% end %>
-<% end %>
 
-<br>
 
-<% @studygroup.messages.each do |msg| %>
-  Posted by: <%= User.find_by(id: msg.user_id).email %>
-  Message: <%= msg.body %>
-  <br>
-<% end %>
+    <% if current_user.eql?(@owner) %>
+      <%= form_for current_user, url: {controller: :users, action: :delete_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
+        <%= f.submit 'Delete' %>
+      <% end %>
+    <% else %>
+      <% if Validation.user_in_studygroup(@studygroup, current_user) %>
+        <%= form_for current_user, :url => {controller: :users, action: :leave_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
+          <%= f.submit 'Leave' %>
+        <% end %>
+      <% else %>
+        <%= form_for current_user, :url => {controller: :users, action: :join_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
+          <%= f.submit 'Join' %>
+        <% end %>
+      <% end %>
+    <% end %>
 
-<% if Validation.user_in_studygroup(@studygroup, current_user) %>
-  <h2>Add a comment:</h2>
-  <%= form_for([@studygroup, @studygroup.messages.build]) do |f| %>
-    <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
-    </p>
-    <p>
-      <%= f.submit 'Post Message' %>
-    </p>
-  <% end %>
-<% end %>
-</div>
+    <br>
+  </div>
+  <div style="  float: left;
+    min-width: 45%;
+    text-align: left;
+    margin: 2px 10px;
+    display: inline;
+    border: 1px solid;
+    background-color:white;border-radius: 16px;">
+    <label style="background-color:#6B8FB7; width: 100%; height: 31px; font-size: 20px;border-bottom: 1px solid;padding-left:20px;border-top-left-radius:15px;border-top-right-radius:15px;color: white;">Messages</label>
+    <div style="padding-left: 20px; background-color:white;">
+      <div style="height: 500px; overflow: scroll;">
+        <% @studygroup.messages.each do |msg| %>
+          <%= ((User.find_by(id: msg.user_id).email).slice(0..((User.find_by(id: msg.user_id).email).index('@')))).split('@')[0] %>
+          
+          <div class="talk-bubble tri-right left-top" >
+            <div class="talktext" style="word-wrap: break-word;" >
+                <p><%= msg.body %></p>
+                <br>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <div>
+        <div style="float: left; width: 50%; text-align: left; margin: 2px 10px; display: inline;">
+          <% if Validation.user_in_studygroup(@studygroup, current_user) %>
+            <h2>Add a comment:</h2>
+            <%= form_for([@studygroup, @studygroup.messages.build]) do |f| %>
+              <p>
+                <%= f.text_area :body %>
+              </p>
+              <p>
+                <p class="btn btn-default"><%= f.submit 'Post Message'%></p>
+                <button type="button" class="btn btn-default" aria-label="Left Align">
+                  <span class="glyphicon glyphicon-refresh" id="refresh-page" aria-hidden="true"onClick="window.location.reload()"></span>
+                </button>
+              </p>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
