Intermediate commit before moving date code to method

--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -1,6 +1,5 @@
-
 <section class="info-page">
-  <h1 style="text-align:center; color:white;font-family: times, Times New Roman, times-roman, georgia, serif;"> Creating A New Study Group</h1>
+  <h1 style="text-align:center; color:white;font-family: times, Times New Roman, times-roman, georgia, serif;"> Create A New Study Group</h1>
   <h3 style="text-align:center; color:white;font-family: Gill Sans, Verdana;
   font-size: 25px;"> Please fill out the form bellow</h3>
   <section class="inner-study-group">
