--- a/app/views/studygroups/show.html.erb
+++ b/app/views/studygroups/show.html.erb
@@ -16,11 +16,12 @@
     <h3> Private? <%= 'No' unless @studygroup.private %>  <%= 'Yes' if @studygroup.private %>  </h3>
     <h3> Unscheduled? <%= 'No' unless @studygroup.unscheduled %>  <%= 'Yes' if @studygroup.unscheduled %>  </h3>
     <h3> List of members: </h3>
-    <% @studygroup.users.each do |user| %>
-      <blockquote>
-      <h4> <%= user.email %> </h4>
-      </blockquote>
-    <% end %>
+
+    <ul>
+      <% @studygroup.users.each do |user| %>
+        <li><h4> <%= user.email %> </h4></li>
+      <% end %>
+    </ul>
 
     <% if current_user.eql?(@owner) %>
       <%= form_for current_user, url: {controller: :users, action: :delete_studygroup, studygroup_id: @studygroup.id}, method: :post do |f| %>
