--- a/app/views/constant/_banner.html.erb
+++ b/app/views/constant/_banner.html.erb
@@ -52,7 +52,7 @@ $(document).ready(function() {
             url: "<%= enroll_course_path %>",
             data: { "course_name": suggestion.value },
             success: function(data) {
-                window.location.reload()
+                window.location.reload();
             }
         });
     })
