--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+  <p style="color:rgb(0,0,255);"> @berkeley.edu email only</p>
   <div><%= f.label :email %>
   <%= f.email_field :email, autofocus: true, :id=>"emailSignup"%></div>
   <p id="userErrors"><?php echo $userErrors; ?></p>
